# mathematica-mcp

./: .gitignore  Cargo.toml  README.md  biome.json  justfile  lychee.toml  rustfmt.toml  taplo.toml  typos.toml
docs/cite-otter/: README.md  ROADMAP.md
docs/migration/: REFERENCE.md  anystyle-DeepWiki.md
src/: main.rs  mcp.rs  repl.rs  session.rs  session_id.rs  wolfram.rs
src/platform/: linux.rs  mod.rs  windows.rs
wstp-sdk-windows/: WSTP-targets-release.cmake  WSTP-targets.cmake  WSTP.cmake  wstp.h  wstp64i4.lib
wstp-sys-patched/: Cargo.toml  build.rs
