[package]
name = "mathematica-mcp"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
flume = "0.11"
hmac = "0.12"
rand = "0.9"
rmcp = { version = "0.14", features = ["macros", "server", "transport-io"] }
schemars = { version = "1.0", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1.49", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4"] }

# Wolfram kernel integration (WSTP)
wstp = "0.2.9"
wolfram-expr = "0.1"
